add publications&teacher&join modify team

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,48 @@
 ---
 ---
 
+@article{shi2023automatic,
+  abbr={JSAC (CCF-A)},
+  selected=true,
+  title={SMSS: Stateful Model Serving in Metaverse with Serverless Computing and GPU Sharing},
+  author={Zinuo Cai, Zebin Chen, Ruhui Ma, Haibing Guan},
+  journal={IEEE Journal on Selected Areas in Communications},
+  year={2023},
+  publisher={IEEE}
+}
+
+@inproceedings{zhang2023fedcp,
+  abbr={SIGKDD (CCF-A)},
+  selected=true,
+  title={FedCP: Separating Feature Information for Personalized Federated Learning via Conditional Policy},
+  author={Zhang, Jianqing and Hua, Yang and Wang, Hao and Song, Tao and Xue, Zhengui and Ma, Ruhui and Guan, Haibing},
+  booktitle={Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  pages={3249--3261},
+  year={2023}
+}
+
+@inproceedings{zhang2023fedala,
+  abbr={AAAI (CCF-A)},
+  selected=true,
+  title={Fedala: Adaptive local aggregation for personalized federated learning},
+  author={Zhang, Jianqing and Hua, Yang and Wang, Hao and Song, Tao and Xue, Zhengui and Ma, Ruhui and Guan, Haibing},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={37},
+  number={9},
+  pages={11237--11244},
+  year={2023}
+}
+
+@article{shi2023automatic,
+  abbr={JSAC (CCF-A)},
+  selected=true,
+  title={Automatic Pipeline Parallelism: A Parallel Inference Framework for Deep Learning Applications in 6G Mobile Communication Systems},
+  author={Shi, Hongjian and Zheng, Weichu and Liu, Zifei and Ma, Ruhui and Guan, Haibing},
+  journal={IEEE Journal on Selected Areas in Communications},
+  year={2023},
+  publisher={IEEE}
+}
+
 @article{zhang2022osttd,
   abbr={JSAC (CCF-A)},
   selected=true,
@@ -14,12 +56,46 @@
   publisher={IEEE}
 }
 
-@article{shi2023automatic,
-  abbr={JSAC (CCF-A)},
+@inproceedings{zhang2022improving,
+  abbr={AAAI (CCF-A)},
   selected=true,
-  title={Automatic Pipeline Parallelism: A Parallel Inference Framework for Deep Learning Applications in 6G Mobile Communication Systems},
-  author={Shi, Hongjian and Zheng, Weichu and Liu, Zifei and Ma, Ruhui and Guan, Haibing},
-  journal={IEEE Journal on Selected Areas in Communications},
-  year={2023},
-  publisher={IEEE}
+  title={Improving bayesian neural networks by adversarial sampling},
+  author={Zhang, Jiaru and Hua, Yang and Song, Tao and Wang, Hao and Xue, Zhengui and Ma, Ruhui and Guan, Haibing},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={36},
+  number={9},
+  pages={10110--10117},
+  year={2022}
+}
+
+@inproceedings{zhang2021robust,
+  abbr={CVPR (CCF-A)},
+  selected=true,
+  title={Robust bayesian neural networks by spectral expectation bound regularization},
+  author={Zhang, Jiaru and Hua, Yang and Xue, Zhengui and Song, Tao and Zheng, Chengyu and Ma, Ruhui and Guan, Haibing},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={3815--3824},
+  year={2021}
+}
+
+@inproceedings{ma2021self,
+  abbr={ICCV (CCF-A)},
+  selected=true,
+  title={Self-supervised vessel segmentation via adversarial learning},
+  author={Ma, Yuxin and Hua, Yang and Deng, Hanming and Song, Tao and Wang, Hao and Xue, Zhengui and Cao, Heng and Ma, Ruhui and Guan, Haibing},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={7536--7545},
+  year={2021}
+}
+
+@inproceedings{deng2020reinforcing,
+  abbr={AAAI (CCF-A)},
+  selected=true,
+  title={Reinforcing Neural Network Stability with Attractor Dynamics},
+  author={Deng, Hanming and Hua, Yang and Song, Tao and Xue, Zhengui and Ma, Ruhui and Robertson, Neil and Guan, Haibing},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={34},
+  number={04},
+  pages={3765--3772},
+  year={2020}
 }
