add course materials

--- a/_teaching/CS2501-23.md
+++ b/_teaching/CS2501-23.md
@@ -36,6 +36,19 @@ category: teaching
 
 ### 课后作业 / Exercise
 
+**作业要求**:
+- 手写作业，扫描上传至Canvas提交作业。
+- 课后作业：20%，当周内补交按60%计。抄袭不计分且扣平时分。
+- 补交邮箱：cs2501-21@outlook.com。
+
+
+**作业通知**
+- 第一次作业（2023年9月24日 23:59）
+  - 《图论第二版》P13：1、2、4、7、10、16、17
+
+**扫描版文件**
+- [图论-Chapter01-习题](/assets/course/2023/cs2501/图论-Chapter01-习题.pdf)
+
 <br/>
 
 ### 习题课 / 随堂测试 / Exam
