--- a/_teaching/CS2501-23.md
+++ b/_teaching/CS2501-23.md
@@ -31,6 +31,7 @@ category: teaching
 ### 课程材料 / Material
 
 - [图论-Chapter01.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter01.pdf)
+- [图论-Chapter02.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter02.pdf)
 
 <br/>
 
@@ -43,11 +44,16 @@ category: teaching
 
 
 **作业通知**
-- 第一次作业（2023年9月24日 23:59）
+- 第一次作业（2023年9月28日 23:59）
   - 《图论第二版》P13：1、2、4、7、10、16、17
+- 第二次作业（2023年9月28日 23:59）
+  - 《图论第二版》P50：1、2、3、4、11
+- 第三次作业（待定）
+  - 《图论第二版》P53：18、19、20、25
 
 **扫描版文件**
 - [图论-Chapter01-习题](/assets/course/2023/cs2501/图论-Chapter01-习题.pdf)
+- [图论-Chapter02-习题](/assets/course/2023/cs2501/图论-Chapter02-习题.pdf)
 
 <br/>
 
