update course materials

--- a/_teaching/ICE6405P-260-23.md
+++ b/_teaching/ICE6405P-260-23.md
@@ -19,3 +19,18 @@ category: teaching
 
 * TOC
 {:toc}
+
+<br/>
+
+### 课程通知 / News
+
+- 2023/9/12：欢迎开始**云计算（ICE6405P）**的学习！
+
+<br/>
+
+### 课程材料 / Material
+
+- [Lecture 1](/assets/course/2023/ice6405p/lec1.pdf)
+- [Lecture 2](/assets/course/2023/ice6405p/lec2.pdf)
+
+<br/>
