--- a/_teaching/CS2501-23.md
+++ b/_teaching/CS2501-23.md
@@ -32,6 +32,7 @@ category: teaching
 
 - [图论-Chapter01.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter01.pdf)
 - [图论-Chapter02.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter02.pdf)
+- [图论-Chapter03.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter03.pdf)
 
 <br/>
 
@@ -48,7 +49,7 @@ category: teaching
   - 《图论第二版》P13：1、2、4、7、10、16、17
 - 第二次作业（2023年9月28日 23:59）
   - 《图论第二版》P50：1、2、3、4、11
-- 第三次作业（待定）
+- 第三次作业（2023年10月6日 23:59）
   - 《图论第二版》P53：18、19、20、25
 
 **扫描版文件**
