--- a/_teaching/CS2501-23.md
+++ b/_teaching/CS2501-23.md
@@ -33,6 +33,7 @@ category: teaching
 - [图论-Chapter01.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter01.pdf)
 - [图论-Chapter02.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter02.pdf)
 - [图论-Chapter03.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter03.pdf)
+- [数理逻辑-Chapter01.pdf](/assets/course/2023/cs2501/离散数学-数理逻辑-Chapter01.pdf)
 
 <br/>
 
@@ -51,6 +52,8 @@ category: teaching
   - 《图论第二版》P50：1、2、3、4、11
 - 第三次作业（2023年10月6日 23:59）
   - 《图论第二版》P53：18、19、20、25
+- 第四次作业（2023年10月15日 23:59）
+  - 《图论第二版》P82：1、2、4、32、33、39、40、44
 
 **扫描版文件**
 - [图论-Chapter01-习题](/assets/course/2023/cs2501/图论-Chapter01-习题.pdf)
@@ -67,3 +70,11 @@ category: teaching
 <br/>
 
 #### 随堂测试
+
+- [2020 年秋《离散数学》图论测试](/assets/course/2023/cs2501/2020年秋《离散数学》图论测试.pdf)
+
+- [2020年秋《离散数学》图论测试参考答案](/assets/course/2023/cs2501/2020年秋《离散数学》图论测试参考答案.pdf)
+
+- [2021 年秋《离散数学》图论测试](/assets/course/2023/cs2501/2021年秋《离散数学》图论测试.pdf)
+
+- [2021年秋《离散数学》图论测试参考答案](/assets/course/2023/cs2501/2021年秋《离散数学》图论测试参考答案.pdf)
