update course materials

--- a/_teaching/CS2501-23.md
+++ b/_teaching/CS2501-23.md
@@ -58,6 +58,7 @@ category: teaching
 **扫描版文件**
 - [图论-Chapter01-习题](/assets/course/2023/cs2501/图论-Chapter01-习题.pdf)
 - [图论-Chapter02-习题](/assets/course/2023/cs2501/图论-Chapter02-习题.pdf)
+- [图论-Chapter03-习题](/assets/course/2023/cs2501/图论-Chapter03-习题.pdf)
 
 <br/>
 
