update course materials

--- a/_teaching/CS2501-23.md
+++ b/_teaching/CS2501-23.md
@@ -34,6 +34,7 @@ category: teaching
 - [图论-Chapter02.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter02.pdf)
 - [图论-Chapter03.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter03.pdf)
 - [数理逻辑-Chapter01.pdf](/assets/course/2023/cs2501/离散数学-数理逻辑-Chapter01.pdf)
+- [数理逻辑-Chapter02.pdf](/assets/course/2023/cs2501/离散数学-数理逻辑-Chapter02.pdf)
 
 <br/>
 
@@ -67,6 +68,8 @@ category: teaching
 <br/>
 
 #### 习题课
+
+- [习题课01](/assets/course/2023/cs2501/习题课01.pdf)
 
 <br/>
 
