update course materials

--- a/_teaching/ICE6405P-260-23.md
+++ b/_teaching/ICE6405P-260-23.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: todo
-description: todo
+title: 云计算
+description: 2023年秋云计算（ICE6405P）课程网站
 category: teaching
 ---
 
@@ -28,9 +28,45 @@ category: teaching
 
 <br/>
 
-### 课程材料 / Material
+### 课程材料 / Lecture
 
 - [Lecture 1](/assets/course/2023/ice6405p/lec1.pdf)
 - [Lecture 2](/assets/course/2023/ice6405p/lec2.pdf)
 
 <br/>
+
+### 实践课材料 / Hands-on
+
+- [Hands-on 1](/assets/course/2023/ice6405p/handson1.pdf)
+
+<br/>
+
+### 实践作业 / Homework
+
+#### 作业一
+
+本次作业分为任务一和任务二，占总成绩的10%。作业截止时间为11月5日23:59。
+
+**任务一**
+
+在LeNet的基础上，进行以下研究：
+- 将平均汇聚层替换为最大汇聚层，会发生什么？
+- 尝试构建一个基于LeNet的更复杂的网络，以提高其准确性。
+  - 调整卷积窗口大小。
+  - 调整输出通道的数量。
+  - 调整激活函数（如ReLU）。
+  - 调整卷积层的数量。
+  - 调整全连接层的数量。
+  - 调整学习率和其他训练细节（例如，初始化和轮数）。
+- 在MNIST、FashionMNIST等数据集上尝试以上改进的网络，分析结果变化的原因，总结经验。
+- 显示不同输入（例如毛衣和外套）时，LeNet第一层和第二层的激活值。尝试解释。
+
+作业提交：实验报告+源代码
+
+#### 任务二
+在Transformer的基础上，自选问题进行研究。
+- 将Transformer的结构中，是先进行残差连接再进行LayerNorm操作的。尝试替换顺序，观察网络性能变化结果，并结合相关文献分析原因。
+- Transformer最初设计是被用于自然语言处理任务中的。调研相关文献，研究将Transformer网络结构应用到计算机视觉领域的方案，分析其相对于CNN的优劣。
+- 其他，合理即可。
+
+作业提交：实验报告+源代码（如有）
