--- a/_teaching/CS2501-23.md
+++ b/_teaching/CS2501-23.md
@@ -55,6 +55,8 @@ category: teaching
   - 《图论第二版》P53：18、19、20、25
 - 第四次作业（2023年10月15日 23:59）
   - 《图论第二版》P82：1、2、4、32、33、39、40、44
+- 第五次作业（2023年10月29日 23:59）
+  - 《数理逻辑》P12：1（2,4,6,8），4（2,4,6），5（2,4,6,8），6（2）
 
 **扫描版文件**
 - [图论-Chapter01-习题](/assets/course/2023/cs2501/图论-Chapter01-习题.pdf)
