Refactoring for teaching

--- a/_teaching/ICE6405P-260-23/ICE6405P-260-23.md
+++ b/_teaching/ICE6405P-260-23/ICE6405P-260-23.md
@@ -3,6 +3,7 @@ layout: page
 title: 云计算
 description: 2023年秋云计算（ICE6405P）课程网站
 category: teaching
+permalink: /teaching/ICE6405P-260-23/
 ---
 
 <head>
@@ -30,14 +31,14 @@ category: teaching
 
 ### 课程材料 / Lecture
 
-- [Lecture 1](/assets/course/2023/ice6405p/lec1.pdf)
-- [Lecture 2](/assets/course/2023/ice6405p/lec2.pdf)
+- [Lecture 1](./assets/lec1.pdf)
+- [Lecture 2](./assets/lec2.pdf)
 
 <br/>
 
 ### 实践课材料 / Hands-on
 
-- [Hands-on 1](/assets/course/2023/ice6405p/handson1.pdf)
+- [Hands-on 1](./assets/handson1.pdf)
 
 <br/>
 
