--- a/_teaching/CS2501-23/CS2501-23.md
+++ b/_teaching/CS2501-23/CS2501-23.md
@@ -3,6 +3,7 @@ layout: page
 title: 离散数学(2023)
 description: 2023年秋离散数学（CS2501）课程网站
 category: teaching
+permalink: /teaching/CS2501-23/
 ---
 
 <head>
@@ -30,11 +31,11 @@ category: teaching
 
 ### 课程材料 / Material
 
-- [图论-Chapter01.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter01.pdf)
-- [图论-Chapter02.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter02.pdf)
-- [图论-Chapter03.pdf](/assets/course/2023/cs2501/离散数学-图论-Chapter03.pdf)
-- [数理逻辑-Chapter01.pdf](/assets/course/2023/cs2501/离散数学-数理逻辑-Chapter01.pdf)
-- [数理逻辑-Chapter02.pdf](/assets/course/2023/cs2501/离散数学-数理逻辑-Chapter02.pdf)
+- [图论-Chapter01.pdf](./assets/离散数学-图论-Chapter01.pdf)
+- [图论-Chapter02.pdf](./assets/离散数学-图论-Chapter02.pdf)
+- [图论-Chapter03.pdf](./assets/离散数学-图论-Chapter03.pdf)
+- [数理逻辑-Chapter01.pdf](./assets/离散数学-数理逻辑-Chapter01.pdf)
+- [数理逻辑-Chapter02.pdf](./assets/离散数学-数理逻辑-Chapter02.pdf)
 
 <br/>
 
@@ -57,9 +58,9 @@ category: teaching
   - 《图论第二版》P82：1、2、4、32、33、39、40、44
 
 **扫描版文件**
-- [图论-Chapter01-习题](/assets/course/2023/cs2501/图论-Chapter01-习题.pdf)
-- [图论-Chapter02-习题](/assets/course/2023/cs2501/图论-Chapter02-习题.pdf)
-- [图论-Chapter03-习题](/assets/course/2023/cs2501/图论-Chapter03-习题.pdf)
+- [图论-Chapter01-习题](./assets/图论-Chapter01-习题.pdf)
+- [图论-Chapter02-习题](./assets/图论-Chapter02-习题.pdf)
+- [图论-Chapter03-习题](./assets/图论-Chapter03-习题.pdf)
 
 <br/>
 
@@ -69,16 +70,16 @@ category: teaching
 
 #### 习题课
 
-- [习题课01](/assets/course/2023/cs2501/习题课01.pdf)
+- [习题课01](./assets/习题课01.pdf)
 
 <br/>
 
 #### 随堂测试
 
-- [2020 年秋《离散数学》图论测试](/assets/course/2023/cs2501/2020年秋《离散数学》图论测试.pdf)
+- [2020 年秋《离散数学》图论测试](./assets/2020年秋《离散数学》图论测试.pdf)
 
-- [2020年秋《离散数学》图论测试参考答案](/assets/course/2023/cs2501/2020年秋《离散数学》图论测试参考答案.pdf)
+- [2020年秋《离散数学》图论测试参考答案](./assets/2020年秋《离散数学》图论测试参考答案.pdf)
 
-- [2021 年秋《离散数学》图论测试](/assets/course/2023/cs2501/2021年秋《离散数学》图论测试.pdf)
+- [2021 年秋《离散数学》图论测试](./assets/2021年秋《离散数学》图论测试.pdf)
 
-- [2021年秋《离散数学》图论测试参考答案](/assets/course/2023/cs2501/2021年秋《离散数学》图论测试参考答案.pdf)
+- [2021年秋《离散数学》图论测试参考答案](./assets/2021年秋《离散数学》图论测试参考答案.pdf)
