--- a/_teaching/CS2501-23/CS2501-23.md
+++ b/_teaching/CS2501-23/CS2501-23.md
@@ -36,6 +36,7 @@ permalink: /teaching/CS2501-23/
 - [图论-Chapter03.pdf](./assets/离散数学-图论-Chapter03.pdf)
 - [数理逻辑-Chapter01.pdf](./assets/离散数学-数理逻辑-Chapter01.pdf)
 - [数理逻辑-Chapter02.pdf](./assets/离散数学-数理逻辑-Chapter02.pdf)
+- [数理逻辑-Chapter04.pdf](./assets/离散数学-数理逻辑-Chapter04.pdf)
 
 <br/>
 
@@ -58,8 +59,14 @@ permalink: /teaching/CS2501-23/
   - 《图论第二版》P82：1、2、4、32、33、39、40、44
 - 第五次作业（2023年10月29日 23:59）
   - 《数理逻辑》P12：1（2,4,6,8），4（2,4,6），5（2,4,6,8），6（2）
+- 第六次作业（2023年11月12日 23:59）
+  - 《数理逻辑》P37：1（1,3），2，3，4（2），5（8）
+  - 7（10,11），8（4,5,6,补充），9（1），12（1）
+  - 补充：证明
+    - $(P\rightarrow(Q\rightarrow R)) \wedge (Q\rightarrow(R\rightarrow S)) \Rightarrow P\rightarrow(Q\rightarrow S) $
 
 **扫描版文件**
+
 - [图论-Chapter01-习题](./assets/图论-Chapter01-习题.pdf)
 - [图论-Chapter02-习题](./assets/图论-Chapter02-习题.pdf)
 - [图论-Chapter03-习题](./assets/图论-Chapter03-习题.pdf)
