--- a/_teaching/ICE6405P-260-23/ICE6405P-260-23.md
+++ b/_teaching/ICE6405P-260-23/ICE6405P-260-23.md
@@ -26,6 +26,7 @@ permalink: /teaching/ICE6405P-260-23/
 ### 课程通知 / News
 
 - 2023/9/12：欢迎开始**云计算（ICE6405P）**的学习！
+- 2023/11/6：请登录OC网站进行论文联邦学习论文的选择！
 
 <br/>
 
@@ -33,6 +34,8 @@ permalink: /teaching/ICE6405P-260-23/
 
 - [Lecture 1](./assets/lec1.pdf)
 - [Lecture 2](./assets/lec2.pdf)
+- [Lecture 3](./assets/lec3.pdf)
+- [Lecture 4](./assets/lec4.pdf)
 
 <br/>
 
@@ -64,7 +67,8 @@ permalink: /teaching/ICE6405P-260-23/
 
 作业提交：实验报告+源代码
 
-#### 任务二
+**任务二**
+
 在Transformer的基础上，自选问题进行研究。
 - 将Transformer的结构中，是先进行残差连接再进行LayerNorm操作的。尝试替换顺序，观察网络性能变化结果，并结合相关文献分析原因。
 - Transformer最初设计是被用于自然语言处理任务中的。调研相关文献，研究将Transformer网络结构应用到计算机视觉领域的方案，分析其相对于CNN的优劣。
