--- a/_teaching/ICE6405P-260-23/ICE6405P-260-23.md
+++ b/_teaching/ICE6405P-260-23/ICE6405P-260-23.md
@@ -27,6 +27,7 @@ permalink: /teaching/ICE6405P-260-23/
 
 - 2023/9/12：欢迎开始**云计算（ICE6405P）**的学习！
 - 2023/11/6：请登录OC网站进行论文联邦学习论文的选择！
+- 2023/11/6：
 
 <br/>
 
@@ -42,6 +43,7 @@ permalink: /teaching/ICE6405P-260-23/
 ### 实践课材料 / Hands-on
 
 - [Hands-on 1](./assets/handson1.pdf)
+- [Hands-on 2](./assets/handson2.pdf)
 
 <br/>
 
@@ -75,3 +77,21 @@ permalink: /teaching/ICE6405P-260-23/
 - 其他，合理即可。
 
 作业提交：实验报告+源代码（如有）
+
+#### 作业二
+
+本次作业占总成绩的25%，作业截止时间为11月26日23:59。本次作业为小组作业，每组人数为2人。本次作业的结题需要通过课上答辩。
+
+在课上讲的五种FedAvg的拓展算法（FedDyn, MOON, KT-pFL, FedMA, SageFlow）的基础上，进行以下研究：
+
+- 复现论文代码（FedDyn和MOON需要实现不少于两种的联邦学习实现方式），实现方式不限于：
+  - 串行模拟并行，多线程，多进程，多虚拟机，多容器，多机
+- 在不少于两个数据集上进行运行，总结实验结果，可用数据集不限于：
+  - MNIST，Fashion-MNIST，Cifar10，Cifar100
+- 在不少于两种模型上进行运行，总结实验结果，可用模型不限于：
+  - LeNet，ResNet，VGG，GoogleNet
+- 对算法中的各个超参数进行实验测试，可测试超参数不限于：
+  - 客户端数量，客户端参与率，学习率，Batch size，Local epoch
+- (bonus) 尝试对于论文方法进行改进，并实验验证方案的可行性。
+
+作业提交：实验报告+源代码+必要的实验log数据+答辩ppt
