--- a/_teaching/CS2501-23/CS2501-23.md
+++ b/_teaching/CS2501-23/CS2501-23.md
@@ -37,6 +37,7 @@ permalink: /teaching/CS2501-23/
 - [数理逻辑-Chapter01.pdf](./assets/离散数学-数理逻辑-Chapter01.pdf)
 - [数理逻辑-Chapter02.pdf](./assets/离散数学-数理逻辑-Chapter02.pdf)
 - [数理逻辑-Chapter04.pdf](./assets/离散数学-数理逻辑-Chapter04.pdf)
+- [集合论-Chapter09.pdf](./assets/离散数学-集合论-Chapter09.pdf)
 
 <br/>
 
