--- a/_teaching/ICE6405P-260-23/ICE6405P-260-23.md
+++ b/_teaching/ICE6405P-260-23/ICE6405P-260-23.md
@@ -27,7 +27,7 @@ permalink: /teaching/ICE6405P-260-23/
 
 - 2023/9/12：欢迎开始**云计算（ICE6405P）**的学习！
 - 2023/11/6：请登录OC网站进行论文联邦学习论文的选择！
-- 2023/11/6：
+- 2023/12/10：请登录OC网站进行无服务器计算论文的选择！
 
 <br/>
 
@@ -37,6 +37,8 @@ permalink: /teaching/ICE6405P-260-23/
 - [Lecture 2](./assets/lec2.pdf)
 - [Lecture 3](./assets/lec3.pdf)
 - [Lecture 4](./assets/lec4.pdf)
+- [Lecture 5](./assets/lec5.pdf)
+- [Lecture 6](./assets/lec6.pdf)
 
 <br/>
 
@@ -44,6 +46,7 @@ permalink: /teaching/ICE6405P-260-23/
 
 - [Hands-on 1](./assets/handson1.pdf)
 - [Hands-on 2](./assets/handson2.pdf)
+- [Hands-on 3](./assets/handson3.pdf)、[AWS Lambda](./assets/handson3-supp.pdf)
 
 <br/>
 
@@ -80,7 +83,7 @@ permalink: /teaching/ICE6405P-260-23/
 
 #### 作业二
 
-本次作业占总成绩的25%，作业截止时间为11月26日23:59。本次作业为小组作业，每组人数为2人。本次作业的结题需要通过课上答辩。
+本次作业占总成绩的25%，作业截止时间为11月26日23:59。本次作业为单人作业。本次作业的结题需要通过课上答辩。
 
 在课上讲的五种FedAvg的拓展算法（FedDyn, MOON, KT-pFL, FedMA, SageFlow）的基础上，进行以下研究：
 
@@ -93,5 +96,19 @@ permalink: /teaching/ICE6405P-260-23/
 - 对算法中的各个超参数进行实验测试，可测试超参数不限于：
   - 客户端数量，客户端参与率，学习率，Batch size，Local epoch
 - (bonus) 尝试对于论文方法进行改进，并实验验证方案的可行性。
+
+作业提交：实验报告+源代码+必要的实验log数据+答辩ppt
+
+#### 作业三
+
+本次作业占总成绩的25%，作业截止时间为12月31日23:59。本次作业为单人作业。本次作业的结题需要通过课上答辩。
+
+在课上讲的四种无服务器计算应用（MapReduce、高维矩阵计算、分布式训练、分布式推理）的基础上，选择一个合适的应用进行研究：
+
+- 基于一种无服务器计算框架（OpenWhisk、阿里云、AWS Lambda）设计上述应用的框架。
+- 探究不同的并行函数对于实验性能的影响。
+- 探究不同的资源配置对于实验性能的影响。
+- 计算基于无服务器计算的应用对于通信与计算时间的开销。
+- （bonus）尝试对于应用的资源配置方案提出面向cost或者latency的优化方案，并实验验证方案的可行性。
 
 作业提交：实验报告+源代码+必要的实验log数据+答辩ppt
