--- a/_teaching/CS2501-23/CS2501-23.md
+++ b/_teaching/CS2501-23/CS2501-23.md
@@ -38,6 +38,7 @@ permalink: /teaching/CS2501-23/
 - [数理逻辑-Chapter02.pdf](./assets/离散数学-数理逻辑-Chapter02.pdf)
 - [数理逻辑-Chapter04.pdf](./assets/离散数学-数理逻辑-Chapter04.pdf)
 - [集合论-Chapter09.pdf](./assets/离散数学-集合论-Chapter09.pdf)
+- [集合论-Chapter10.pdf](./assets/离散数学-集合论-Chapter10.pdf)
 
 <br/>
 
@@ -65,6 +66,10 @@ permalink: /teaching/CS2501-23/
   - 7（10,11），8（4,5,6,补充），9（1），12（1）
   - 补充：证明
     - $(P\rightarrow(Q\rightarrow R)) \wedge (Q\rightarrow(R\rightarrow S)) \Rightarrow P\rightarrow(Q\rightarrow S) $
+- 第七次作业（2023年11月26日 23:59）
+- 第八次作业（2023年12月3日 23:59）
+- 第九次作业（2023年12月19日 23:59）
+- 第十次作业 (2023年12月24日 23:59)
 
 **扫描版文件**
 
