--- a/_news/2024_08_02_paper.md
+++ b/_news/2024_08_02_paper.md
@@ -48,14 +48,9 @@ PipeLoad工作流程图
 
 ## 韩学远个人介绍
 
-本科毕业学校：上海交通大学
-
-研究方向：云计算、深度学习大模型
-
-荣誉奖励：
-
-2020-2021学年上海交通大学巴黎卓越工程师学院ARDIAN进步奖 
-
-2020-2021学年上海交通大学本科生优秀奖学金C级 
-
-2022-2023学年上海交通大学本科生优秀奖学金B级 
+- 本科毕业学校：上海交通大学
+- 研究方向：云计算、深度学习大模型
+- 荣誉奖励：
+    - 2020-2021学年上海交通大学巴黎卓越工程师学院ARDIAN进步奖 
+    - 2020-2021学年上海交通大学本科生优秀奖学金C级 
+    - 2022-2023学年上海交通大学本科生优秀奖学金B级 
