revise pic name

--- a/_news/2024_09_22_TOIS.md
+++ b/_news/2024_09_22_TOIS.md
@@ -34,7 +34,7 @@ related_posts: false
 
 <div class="row">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html loading="eager" path="assets/img/2024_09_22_figure2_v1" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html loading="eager" path="assets/img/2024_09_22_figure2_v1.png" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
 <div class="caption">
