--- a/_news/2025_02_28_DAC.md
+++ b/_news/2025_02_28_DAC.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 论文AARC: Automated Affinity-aware Resource Configuration for Serverless Workflows被Design Automation Conference(CCF A)期刊接收，恭喜凌啸！
+title: 论文AARC:Automated Affinity-aware Resource Configuration for Serverless Workflows被Design Automation Conference(CCF A)会议接收，恭喜凌啸！
 date: 2025-02-28 14:00:00+0800
 inline: false
 related_posts: false
